--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,8 +11,8 @@
             <div class="card">
                 <img class="card-img-top" [src]="oferta.imagens[0].url">
                 <div class="card-block">
-                    <h4 class="card-title">{{oferta.titulo}}r</h4>
-                    <p class="card-text">{{oferta.descricao_oferta}}</p>
+                    <h4 class="card-title">{{ oferta.titulo }}</h4>
+                    <p class="card-text">{{ oferta.descricao_oferta }}</p>
                     <p class="preco">{{ oferta.valor | currency: 'BRL': true}}</p>
                     <a href="#" class="btn btn-outline-primary">Ver oferta</a>
                 </div>
