--- a/src/app/topo/topo.component.css
+++ b/src/app/topo/topo.component.css
@@ -14,6 +14,14 @@
     margin-top: 130px;
 }
 
+.banner img{
+    width: 100%;
+}
+
 .active{
     color: #FFF;
+}
+
+.fixed-top{
+    background: white;
 }
