--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,12 +1,14 @@
 <div class="fixed-top">
     <nav class="navbar navbar-light bg-faded">
         <div class="container">
-            <a href="#" class="navbar-brand">
-                <img src="/assets/logo.png" />
-            </a>
-            <a href="#">
-                <img src="/assets/carrinho.png" />
-            </a>
+            <div class="row">
+                <a href="#" class="navbar-brand">
+                    <img src="/assets/logo.png" />
+                </a>
+                <a href="#">
+                    <img src="/assets/carrinho.png" />
+                </a>
+            </div>
         </div>
     </nav>
 
@@ -14,10 +16,10 @@
         <div class="container">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Restaurantes</a>
+                    <a class="nav-link" href="#">Restaurantes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Diversão</a>
+                    <a class="nav-link" href="#">Diversão</a>
                 </li>
             </ul>
         </div>
