Acrescentado os componentes restaurante e diversão, também incluso rota simples

--- a/src/app/topo/topo.component.css
+++ b/src/app/topo/topo.component.css
@@ -3,7 +3,7 @@
 }
 
 .nav-link{
-    background: #C1E4FF;
+    background: #006ACB;
 }
 
 .nav-link:hover{
@@ -19,7 +19,7 @@
 }
 
 .active{
-    color: #FFF;
+    color: #a1c4e6;
 }
 
 .fixed-top{
