--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -16,10 +16,10 @@
         <div class="container">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Restaurantes</a>
+                    <a class="nav-link active" href="#">Restaurantes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Diversão</a>
+                    <a class="nav-link active" href="#">Diversão</a>
                 </li>
             </ul>
         </div>
