--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-light bg-faded">
         <div class="container">
             <div class="row">
-                <a href="#" class="navbar-brand">
+                <a routerLink="" class="navbar-brand">
                     <img src="/assets/logo.png" />
                 </a>
                 <a href="#">
@@ -16,10 +16,10 @@
         <div class="container">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Restaurantes</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/restaurantes">Restaurantes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Diversão</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/diversao">Diversão</a>
                 </li>
             </ul>
         </div>
