--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,8 +4,7 @@
         <h5 class="text-center">Aproveite as super ofertas que separamos para você:</h5>
     </div>
 
-    <hr />
-    <!--linha-->
+    <hr /><!--linha-->
     <div class="row" style="margin-bottom: 50px;">
         <div class="col-sm-4" *ngFor="let oferta of ofertas" >
             <div class="card">
