--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -26,10 +26,11 @@
                     <p>{{oferta.valor | currency: 'BRL': true}}</p>
                 </div>
                 <div class="row">
-                    <button class="btn btn-outline-success">Ver oferta</button>
+                    <button class="btn btn-outline-success" [routerLink]="['/oferta', oferta.id]">Ver oferta</button>
                 </div>
             </div>
         </div>
         <hr />
     </div>
+    <br>
 </div>
