--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -2,12 +2,19 @@
     <nav class="navbar navbar-light bg-faded">
         <div class="container">
             <div class="row">
-                <a routerLink="" class="navbar-brand">
-                    <img src="/assets/logo.png" />
-                </a>
-                <a href="#">
-                    <img src="/assets/carrinho.png" />
-                </a>
+                <div class="col-md-4">
+                    <a routerLink="" class="navbar-brand">
+                        <img src="/assets/logo.png" />
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="Pesquise por ofertas..." #termoDeBusca (keyup)="pesquisa(termoDeBusca.value)"/>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <img src="/assets/carrinho.png" />
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
