--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -8,7 +8,12 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <input type="text" class="form-control" placeholder="Pesquise por ofertas..." #termoDeBusca (keyup)="pesquisa(termoDeBusca.value)"/>
+                    <input 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="Pesquise por ofertas..." 
+                        #termoDeBusca 
+                        (keyup)="pesquisa(termoDeBusca.value)"/>
                 </div>
                 <div class="col-md-2">
                     <a href="#">
