--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -8,12 +8,13 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <input 
-                        type="text" 
-                        class="form-control" 
-                        placeholder="Pesquise por ofertas..." 
-                        #termoDeBusca 
-                        (keyup)="pesquisa(termoDeBusca.value)"/>
+                    <input type="text" class="form-control" placeholder="Pesquise por ofertas..." #termoDeBusca
+                        (keyup)="pesquisa(termoDeBusca.value)" />
+
+                    <ul class="list-group" style="position: absolute;">
+                        <li class="list-group-item" *ngFor="let oferta of ofertasPesquisada">{{ oferta.titulo}}</li>
+                        
+                    </ul>
                 </div>
                 <div class="col-md-2">
                     <a href="#">
