--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                 <div class="card-block">
                     <h4 class="card-title">{{ oferta.titulo }}</h4>
                     <p class="card-text">{{ oferta.descricao_oferta }}</p>
-                    <p class="preco">{{ oferta.valor | currency: 'BRL': true}}</p>
+                    <p class="preco">{{ oferta.valor | currency: 'BRL'}}</p>
                     <a class="btn btn-outline-primary" [routerLink]="['/oferta', oferta.id]">Ver oferta</a>
                 </div>
             </div>
