--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -12,7 +12,7 @@
                         (keyup)="pesquisa(termoDeBusca.value)" />
 
                     <ul class="list-group" style="position: absolute;">
-                        <li class="list-group-item" *ngFor="let oferta of ofertasPesquisada">{{ oferta.titulo }}</li>
+                        <li class="list-group-item" *ngFor="let oferta of ofertasPesquisada">{{ oferta.titulo | descricaoReduzida }}</li>
                         
                     </ul>
                 </div>
